Relaxed contract